# combine-bot

./: .gitmodules  README.md  app.py  pyproject.toml
evals/: questions.yaml
knowledge_base/forum/: .manifest.json  topic_10079.json  topic_10079.txt  topic_10099.json  topic_10099.txt  topic_10112.json  topic_10112.txt  topic_10137.json  topic_10137.txt  topic_10150.json  topic_10150.txt  topic_10219.json  topic_10219.txt  topic_10237.json  topic_10237.txt  topic_10333.json  topic_10333.txt  topic_10354.json  topic_10354.txt  topic_10375.json  topic_10375.txt  topic_10391.json  topic_10391.txt  topic_105372.json  topic_105372.txt  topic_10590.json  topic_10590.txt  topic_10684.json  topic_10684.txt  topic_10813.json  topic_10813.txt  topic_10820.json  topic_10820.txt  topic_10825.json  topic_10825.txt  topic_108363.json  topic_108363.txt  topic_108649.json  topic_108649.txt  topic_111788.json  (+1059 more)
knowledge_base/paper/: paper_clean.txt
scripts/: _inspect_root.py  ask.py  build_index.py  combine_runner.py  eval_answers.py  eval_io.py  eval_retrieval.py  query_index.py  scrape_forum.py
static/: index.html
