[project]
name = "combine-bot"
version = "0.1.0"
description = "RAG-based Q&A bot for the CMS Combine statistical analysis tool."
readme = "combine_bot_context.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "requests>=2.31",
    "sentence-transformers>=5.5.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipython>=9.14.1",
]
